skeleton for product page using grid

--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,4 +1,54 @@
-
+<div class="grid">
+  <div class="NavBar"> </div>
+  <div class="header">
+     <ul>
+    <li><a class="active" href="#home">Home</a></li>
+    <li><a href="#news">News</a></li>
+    <li><a href="#contact">Contact</a></li>
+    <li><a href="#about">About</a></li>
+    </ul></div>
+  <div class="sidebar">
+    
+<ul>
+    <li><a class="active" href="#home">Home</a></li>
+    <li><a href="#news">News</a></li>
+    <li><a href="#contact">Contact</a></li>
+    <li><a href="#about">About</a></li>
+  </ul>
+  
+  </div>
+  <div class="content">
+   
+<table>
+  <tr>
+    <td><img src="">item1</td>
+    <td><img src="">item2</td>
+    <td><img src="">item3</td>
+  </tr>
+  <tr>
+    <td><img src="">item1</td>
+    <td>item2</td>
+    <td>item3</td>
+  </tr>
+  <tr>
+    <td><img src="">item1</td>
+    <td><img src="">item2</td>
+    <td><img src="">item3</td>
+  </tr>
+  <tr>
+    <td><img src="">item1</td>
+    <td><img src="">item2</td>
+    <td><img src="">item3</td>
+  </tr>
+  <tr>
+    <td><img src="">item1</td>
+    <td><img src="">item2</td>
+    <td><img src="">item3</td>
+</tr>
+</table>
+  </div>
+  <div class="footer">Footer</div>
+</div>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
