--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,5 +1,5 @@
 <div class="grid">
-  <div class="NavBar"> </div>
+  <div class="NavBar"><img src="" alt=""></div>
   <div class="header">
      <ul>
     <li><a class="active" href="#home">Home</a></li>
@@ -21,29 +21,29 @@
    
 <table>
   <tr>
-    <td><img src="">item1</td>
-    <td><img src="">item2</td>
-    <td><img src="">item3</td>
+    <td><img src="https://images.unsplash.com/photo-1444021465936-c6ca81d39b84?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=8a1f162e9c72410fb540f8fc6b3d1a3d&auto=format&fit=crop&w=800&q=80" style="height: 200px; width: 200px;">item1</td>
+    <td><img src="https://images.unsplash.com/photo-1444021465936-c6ca81d39b84?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=8a1f162e9c72410fb540f8fc6b3d1a3d&auto=format&fit=crop&w=800&q=80" style="height: 200px; width: 200px;">item2</td>
+    <td><img src="https://images.unsplash.com/photo-1444021465936-c6ca81d39b84?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=8a1f162e9c72410fb540f8fc6b3d1a3d&auto=format&fit=crop&w=800&q=80" style="height: 200px; width: 200px;"></td>
   </tr>
   <tr>
-    <td><img src="">item1</td>
-    <td>item2</td>
-    <td>item3</td>
+    <td><img src="https://images.unsplash.com/photo-1444021465936-c6ca81d39b84?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=8a1f162e9c72410fb540f8fc6b3d1a3d&auto=format&fit=crop&w=800&q=80" style="height: 200px; width: 200px;">item1</td>
+    <td><img src="https://images.unsplash.com/photo-1444021465936-c6ca81d39b84?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=8a1f162e9c72410fb540f8fc6b3d1a3d&auto=format&fit=crop&w=800&q=80" style="height: 200px; width: 200px;">item2</td>
+    <td><img src="https://images.unsplash.com/photo-1444021465936-c6ca81d39b84?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=8a1f162e9c72410fb540f8fc6b3d1a3d&auto=format&fit=crop&w=800&q=80" style="height: 200px; width: 200px;">item3</td>
   </tr>
   <tr>
-    <td><img src="">item1</td>
-    <td><img src="">item2</td>
-    <td><img src="">item3</td>
+    <td><img src="https://images.unsplash.com/photo-1444021465936-c6ca81d39b84?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=8a1f162e9c72410fb540f8fc6b3d1a3d&auto=format&fit=crop&w=800&q=80" style="height: 200px; width: 200px;">item1</td>
+    <td><img src="https://images.unsplash.com/photo-1444021465936-c6ca81d39b84?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=8a1f162e9c72410fb540f8fc6b3d1a3d&auto=format&fit=crop&w=800&q=80" style="height: 200px; width: 200px;">item2</td>
+    <td><img src="https://images.unsplash.com/photo-1444021465936-c6ca81d39b84?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=8a1f162e9c72410fb540f8fc6b3d1a3d&auto=format&fit=crop&w=800&q=80" style="height: 200px; width: 200px;">item3</td>
   </tr>
   <tr>
-    <td><img src="">item1</td>
-    <td><img src="">item2</td>
-    <td><img src="">item3</td>
+    <td><img src="https://images.unsplash.com/photo-1444021465936-c6ca81d39b84?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=8a1f162e9c72410fb540f8fc6b3d1a3d&auto=format&fit=crop&w=800&q=80" style="height: 200px; width: 200px;">item1</td>
+    <td><img src="https://images.unsplash.com/photo-1444021465936-c6ca81d39b84?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=8a1f162e9c72410fb540f8fc6b3d1a3d&auto=format&fit=crop&w=800&q=80" style="height: 200px; width: 200px;">item2</td>
+    <td><img src="https://images.unsplash.com/photo-1444021465936-c6ca81d39b84?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=8a1f162e9c72410fb540f8fc6b3d1a3d&auto=format&fit=crop&w=800&q=80" style="height: 200px; width: 200px;">item3</td>
   </tr>
   <tr>
-    <td><img src="">item1</td>
-    <td><img src="">item2</td>
-    <td><img src="">item3</td>
+    <td><img src="https://images.unsplash.com/photo-1444021465936-c6ca81d39b84?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=8a1f162e9c72410fb540f8fc6b3d1a3d&auto=format&fit=crop&w=800&q=80" style="height: 200px; width: 200px;;">item1</td>
+    <td><img src="https://images.unsplash.com/photo-1444021465936-c6ca81d39b84?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=8a1f162e9c72410fb540f8fc6b3d1a3d&auto=format&fit=crop&w=800&q=80" style="height: 200px; width: 200px;">item2</td>
+    <td><img src="https://images.unsplash.com/photo-1444021465936-c6ca81d39b84?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=8a1f162e9c72410fb540f8fc6b3d1a3d&auto=format&fit=crop&w=800&q=80" style="height: 200px; width: 200px;">item3</td>
 </tr>
 </table>
   </div>
