--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -28,3 +28,10 @@
 hr{
     border: 1px black solid;
 }
+.jumbopic{
+    background-image: url('https://images.pexels.com/photos/186230/pexels-photo-186230.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260');
+    background-size: cover;
+}
+.jumbotron{
+    color: white;
+}
