--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,10 +8,14 @@
     <a class="nav navbar-brand navbar-right" href="#">Products</a>
   </div>
 </nav> -->
+<br>
+<br>
+<br> 
+<br>
 
 
 <div class="container">
-  <div class="jumbotron text-center">
+  <div class="jumbotron text-center jumbopic">
     <div class="container">
       <h1>Gorgeous Gardens</h1>
       <p>Your one stop shop for all your gardening needs!! </p>
@@ -46,6 +50,9 @@
 
 
 </div>
+
+<br>
+<br>
 
 
 
