--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -9,7 +9,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" routerLink="/home">Gorgeous Gardens</a>
+                    <a class="navbar-brand" routerLink="/home"> Gorgeous Gardens </a><a routerLink="/home"><img class="icon " src="../assets/LogoGroupProject.png" alt=""></a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
