--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -34,10 +34,10 @@
  }
     
 .grid div:nth-child(even){
-    background-color: rgb(111, 104, 104);
+    background-color: rgb(113, 62, 62);
 }
 .grid div:nth-child(odd){
-    background-color: rgb(79, 78, 78);
+    background-color: rgb(71, 71, 71);
 }
 
 
@@ -46,7 +46,6 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
 }
 
 li {
@@ -81,10 +80,11 @@ li a:hover {
     display: block;
 
 }
-
-.content > td {
-    display: block
+td{
+    color:white;
+    font: 400;
 }
+
 /* @media screen and (min-width: 736px){
     .grid{
         display: grid;
