--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -16,27 +16,27 @@
     <td class="flowerimg"><img src="https://images.unsplash.com/photo-1444021465936-c6ca81d39b84?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=8a1f162e9c72410fb540f8fc6b3d1a3d&auto=format&fit=crop&w=800&q=80" style="height: 200px; width: 200px; display: block;">
       <button type="button" class="btn btn-success">Buy</button> Dahlia</td>
     <td class="flowerimg"><img src="https://images.unsplash.com/photo-1432064308058-7262c211d2fa?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=c35a3f912ac71ab124d19ff120faa648&auto=format&fit=crop&w=967&q=80" style="height: 200px; width: 200px; display: block;">
-      <button type="button" class="btn btn-success">Buy</button></td>
+      <button type="button" class="btn btn-success">Buy</button> Daisy</td>
     <td class="flowerimg"><img src="https://images.unsplash.com/photo-1502977249166-824b3a8a4d6d?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=b139dbf7082fd5fa4cb3b1187d1cf221&auto=format&fit=crop&w=800&q=80" style="height: 200px; width: 200px; display: block;">
-      <button type="button" class="btn btn-success">Buy</button></td>
+      <button type="button" class="btn btn-success">Buy</button> Bird of Paradise</td>
   </tr>
 
   <tr>
     <td class="flowerimg"><img src="https://images.unsplash.com/photo-1445294211564-3ca59d999abd?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=6d9789d6ef33e74e46b00f022847c8f4&auto=format&fit=crop&w=967&q=80" style="height: 200px; width: 200px; display: block;">
-      <button type="button" class="btn btn-success">Buy</button></td>
+      <button type="button" class="btn btn-success">Buy</button> Oak Tree</td>
     <td class="flowerimg"><img src="https://images.unsplash.com/photo-1526397751294-331021109fbd?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=bf72ba2da7225a796c757fa9f01dda81&auto=format&fit=crop&w=967&q=80" style="height: 200px; width: 200px; display: block;">
-      <button type="button" class="btn btn-success">Buy</button></td>
+      <button type="button" class="btn btn-success">Buy</button> Bonsai</td>
     <td class="flowerimg"><img src="https://images.unsplash.com/photo-1446769066069-f8c54fae653b?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=2baf2430e67afca4457c12e5f017eb3e&auto=format&fit=crop&w=1050&q=80" style="height: 200px; width: 200px; display: block;">
-      <button type="button" class="btn btn-success">Buy</button></td>
+      <button type="button" class="btn btn-success">Buy</button> Redwood</td>
   </tr>
 
   <tr>
     <td class="flowerimg"><img src="https://images.unsplash.com/photo-1495758874721-e9da827a0581?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=a164e8e9a959efa57f7103d90c8715cb&auto=format&fit=crop&w=1051&q=80" style="height: 200px; width: 200px; display: block;">
-      <button type="button" class="btn btn-success">Buy</button></td>
+      <button type="button" class="btn btn-success">Buy</button> Fern</td>
     <td class="flowerimg"><img src="https://images.unsplash.com/photo-1526040193601-daf07097e302?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=2962accfb5edd6b3ba55d2f7f487df2d&auto=format&fit=crop&w=646&q=80" style="height: 200px; width: 200px; display: block;">
-      <button type="button" class="btn btn-success">Buy</button></td>
+      <button type="button" class="btn btn-success">Buy</button> Rose Bush</td>
     <td class="flowerimg"><img src="https://images.unsplash.com/photo-1527732669179-6f1eacdc9d89?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=64c8baef74a11644f942da55b9293f95&auto=format&fit=crop&w=1050&q=80" style="height: 200px; width: 200px; display: block;">
-      <button type="button" class="btn btn-success">Buy</button></td>
+      <button type="button" class="btn btn-success">Buy</button> Ivy</td>
   </tr>
 
 </table>
